language/move-lang/tests/move_check/parser/friend_decl_more_than_one_module.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/friend_decl_more_than_one_module.move:7:14
  │
7 │     friend A 0x42::B;
  │              ^^^^
  │              │
  │              Unexpected '0x42'
  │              Expected ';'

